# computer-science

./: Cargo.toml  LICENSE  README.md
c/: CMakeLists.txt  main.c
c/lists/: linked-list.c
c/other/: queue.c  queue.h
c/sorting/: btree.c  bubble.c  gnome.c  helpers.c  helpers.h  insertion.c  merge.c  shaker.c  sorting.h  timsort.c
c/trees/: binary-tree.c  binary-tree.h  red-black-tree.c  red-black-tree.h
src/: helpers.rs  lib.rs
src/algorithms/sorting/: bubble.rs  gnome.rs  insertion.rs  merge.rs  mod.rs  selection.rs  shaker.rs  tests.rs
src/patterns/: decorator.rs  mod.rs
src/structures/: mod.rs  types.rs
src/structures/lists/: linked_list.rs
src/structures/trees/: binary_search_tree.rs  mod.rs  simple_binary_tree.rs
